# whereis-dimagi

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/whereis/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  security.py  templating.py  utils.py
src/whereis/adapters/: email_imap.py  email_mailgun.py  sms_simulator.py  sms_twilio.py
src/whereis/data/: loader.py
src/whereis/routers/: api.py  badges.py  email.py  form.py  health.py  map.py  query.py  sms.py
src/whereis/services/: badges.py  geocoder.py  history.py  ingest.py  parser.py  strategies.py  validator.py
src/whereis/static/: style.css
src/whereis/templates/: badges.html  base.html  form.html  map.html  whereis.html
src/whereis/tools/: generate_fixtures.py
tests/: conftest.py  test_api_email.py  test_api_form.py  test_api_sms.py  test_badges.py  test_end_to_end.py  test_geocoder.py  test_parser.py  test_query_as_of.py  test_strategies.py  test_validator.py
