[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whereis-dimagi"
version = "0.1.0"
description = "Low-bandwidth location tracker for Dimagi field staff, backed by GeoNames."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dimagi Candidate" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rapidfuzz>=3.6",
    "httpx>=0.27",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
whereis-seed = "whereis.data.loader:cli"
whereis-fixtures = "whereis.tools.generate_fixtures:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whereis = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:dateutil",
]

[tool.pytest_asyncio]
mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: Depends(...) in defaults is the FastAPI idiom
